--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,30 +7,33 @@
 <body>
     <div class="wrapper">
 
-    {{ partial "sidebar.html" . }}
+      {{ partial "sidebar.html" . }}
 
-	<div class="main-wrapper">
+    	<div class="main-wrapper">
 
-    {{ if .Site.Params.summary.enable }}
-	{{ partial "summary.html" . }}
-    {{ end }}
+        {{ if .Site.Params.summary.enable }}
+    	  {{ partial "summary.html" . }}
+        {{ end }}
 
-    {{ if .Site.Params.experiences.enable }}
-    {{ partial "experiences.html" . }}
-    {{ end }}
+        {{ if .Site.Params.experiences.enable }}
+        {{ partial "experiences.html" . }}
+        {{ end }}
 
-    {{ if .Site.Params.projects.enable }}
-    {{ partial "projects.html" . }}
-    {{ end }}
+        {{ if .Site.Params.projects.enable }}
+        {{ partial "projects.html" . }}
+        {{ end }}
 
-    {{ if .Site.Params.skills.enable }}
-	{{ partial "skills.html" . }}
-    {{ end }}
+        {{ if .Site.Params.skills.enable }}
+    	  {{ partial "skills.html" . }}
+        {{ end }}
 
-	</div><!--//main-body-->
+        {{ if .Site.Params.knowhow.enable }}
+    	  {{ partial "knowhow.html" . }}
+        {{ end }}
+    	</div><!--//main-body-->
     </div>
 
-	{{ partial "footer.html" . }}
+	  {{ partial "footer.html" . }}
 
     {{ partial "scripts.html" . }}
 </body>
